Implement connector engine and android routes for api server
